--- a/src/main/resources/static/html/jumbotron.html
+++ b/src/main/resources/static/html/jumbotron.html
@@ -54,29 +54,47 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <div class="container">
-          <h1 class="display-3">Hello, world!</h1>
-          <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+          <h1 class="display-5 text-center">Ordering Accounting UI</h1>
+          <form class="form-inline my-2 my-lg-2 justify-content-md-center">
+            <input class=" col-4 form-control mr-sm-0" type="text" placeholder="OrderID/WechatID" aria-label="Search">
+            <button class="col-1 btn btn-outline-primary my-2 my-sm-2" type="submit">Search</button>
+            <button class="col-1 btn btn-outline-success my-2 my-md-2" type="submit">Create</button>
+          </form>
         </div>
       </div>
 
       <div class="container">
         <!-- Example row of columns -->
-        <div class="row">
-          <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        <div class="row justify-content-md-center">
+          <div class="col-md-4 text-center">
+            <h2>Payment</h2>
+            <div class="form-group row">
+              <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
+              <div class="col-sm-10">
+                <input type="text" readonly class="form-control" id="staticEmail" value="email@example.com">
+              </div>
+              <button class="col-3 btn btn-outline-primary my-2 my-sm-2" type="submit">Update</button>
+            </div>
           </div>
-          <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          <div class="col-md-4 text-center">
+            <h2>Product</h2>
+            <div class="form-group row">
+              <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
+              <div class="col-sm-10">
+                <input type="text" readonly class="form-control" id="staticEmail" value="email@example.com">
+              </div>
+              <button class="col-3 btn btn-outline-primary my-2 my-sm-2" type="submit">Update</button>
+            </div>
           </div>
-          <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          <div class="col-md-4 text-center">
+            <h2>Shipment</h2>
+            <div class="form-group row">
+              <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
+              <div class="col-sm-10">
+                <input type="text" readonly class="form-control" id="staticEmail" value="email@example.com">
+              </div>
+              <button class="col-3 btn btn-outline-primary my-2 my-sm-2" type="submit">Update</button>
+            </div>
           </div>
         </div>
 
